err/django-lutefisk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_lutefisk-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/lutefisk'...
Compiling './lib/python3.5/site-packages/lutefisk/forms.py'...
***   File "./lib/python3.5/site-packages/lutefisk/forms.py", line 131
    raise TypeError, "user must be an instance of User"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lutefisk/locale'...
Listing './lib/python3.5/site-packages/lutefisk/locale/es'...
Listing './lib/python3.5/site-packages/lutefisk/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lutefisk/management'...
Listing './lib/python3.5/site-packages/lutefisk/management/commands'...
Listing './lib/python3.5/site-packages/lutefisk/migrations'...
Listing './lib/python3.5/site-packages/lutefisk/templates'...
Listing './lib/python3.5/site-packages/lutefisk/templates/lutefisk'...
Listing './lib/python3.5/site-packages/lutefisk/templates/lutefisk/emails'...
Listing './lib/python3.5/site-packages/lutefisk/tests'...
Compiling './lib/python3.5/site-packages/lutefisk/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/lutefisk/tests/__init__.py", line 38
    print self.subproc.stdout.readline()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
